--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 乌克兰-2.23MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.74MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.07MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-4.05MB/s(Youtube:不良林), server: 213.183.53.177, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇭🇰 香港-3.93MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇳🇱 荷兰-1.27MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇨🇳 中国-9.01MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.77MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.50MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32453, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 乌克兰-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 乌克兰-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 乌克兰-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.93MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 乌克兰-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 乌克兰-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 乌克兰-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 乌克兰-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.93MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.50MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
 rules:
