--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.56MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.39MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-400.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: 103.56.60.185, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.44MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林), server: 213.183.53.177, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
   - {name: 🇯🇵 日本-4.92MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.56MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-400.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
