--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.44MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林), server: 213.183.53.177, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.92MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-178.0KB/s(Youtube:不良林), server: data-hk-v2.shwjfkw.cn, port: 50205, type: vmess, uuid: b1478e24-4916-3abe-8f17-15931012ecbe, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: data-hk-v2.shwjfkw.cn}}
+  - {name: 🇯🇵 日本-5.09MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-2.54MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32453, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
